--- a/index.html
+++ b/index.html
@@ -65,6 +65,24 @@ footer{
   font-size:0.8rem;
   color:var(--grey);
 }
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.6rem !important;
+  }
+  .subtitle {
+    font-size: 0.8rem !important;
+  }
+  .message {
+    font-size: 0.8rem !important;
+  }
+  footer {
+    font-size: 0.6rem !important;
+  }
+  .container {
+    padding: 2rem 1.5rem !important;
+  }
+}
 </style>
 </head>
 <body>
